<resources>
    <string name="app_name">Meet Lisbon</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="n_o_tem_conta_registar">Não tem conta? Registar</string>
    <string name="continuar_como_convidado">Continuar como convidado</string>
    <string name="MAPS_API_KEY">AIzaSyAeUyaj3TMqmNMCU2g_15HJHcjJ-c9SZ4k</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wishlist">WISHLIST</string>
</resources>